[Files App] Fixes thumbnail image overlapping label
Bug: 1318552
Test: Manually tested that other thumbnails didn't break after changes
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3672096
Commit-Queue: Marcello Salomao <msalomao@google.com>
Auto-Submit: Marcello Salomao <msalomao@google.com>
Cr-Commit-Position: refs/heads/main@{#1008153}

--- a/ui/file_manager/file_manager/foreground/css/file_manager.css
+++ b/ui/file_manager/file_manager/foreground/css/file_manager.css
@@ -1436,7 +1436,7 @@ body.files-ng grid .grid-title.files {
   padding-top: calc(20px + 16px);
 }
 
-body[type='full-page'] .thumbnail-frame > .img-container {
+body.files-ng .thumbnail-frame > .img-container {
   position: relative;
 }
 
